FIXED: Issue where an empty element was output when no avatar was selected in the Testimonial block. FIXED: Issue where an empty element was output when no quote text was set in the Testimonial Element. FIXED: Minor spacing issues in the Testimonial element. ADDED: Toolbar button to clear avatar on the Testimonial block.
git-svn-id: https://cssigniter.svn.beanstalkapp.com/cssigniter/plugins/gutenbee/trunk@31526 4294cb29-2c39-44b5-8b85-408dc27d7d38

--- a/src/blocks/testimonial/_style.scss
+++ b/src/blocks/testimonial/_style.scss
@@ -5,6 +5,14 @@
   padding: 0;
   border: 0;
 
+  &.has-text-align-center {
+    .gutenbee-testimonial-avatar {
+      img {
+        margin: 0 auto;
+      }
+    }
+  }
+
   .gutenbee-testimonial-avatar {
     order: 1;
     margin: 0;
@@ -12,9 +20,16 @@
 
   .wp-block-testimonial-content-wrapper {
     order: 2;
+
+    p {
+      &:last-child {
+        margin-bottom: 20px;
+      }
+    }
   }
 
   .gutenbee-block-testimonial__citation {
+    margin: 0;
     order: 3;
   }
 
